# prometheus-workshop-service-python

./: README.md  docker-compose.yml  otel-collector-config-test.yml  prometheus-test.yml  pyproject.toml
otel_examples/: showcase.py
packer/: base-install.sh  conky-install.sh  grafana-install.sh  otel-collector-install.sh  prometheus-install.sh  prometheus-workshop-service-python.pkr.hcl  service-install.sh
tests/: utils_test.py
workshop_service/: __init__.py  app.py  diskspace.py  memleak.py  ratelimit.py  scenario.py  showcase.py  utils.py
workshop_service/scenario/: __init__.py  diskspace.py  memleak.py  ratelimit.py  scenario.py
