[tool.poetry]
name = "prometheus-workshop-service-python"
authors = ["Tomer Gabel <tomer@tomergabel.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = {extras = ["standard"], version = "^0.30.6"}
opentelemetry-instrumentation-fastapi = "^0.48b0"
opentelemetry-api = "^1.27.0"
opentelemetry-sdk = "^1.27.0"
opentelemetry-exporter-otlp = "^1.27.0"

[tool.poetry.group.dev.dependencies]
fastapi-cli = "^0.0.5"
ruff = "^0.6.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
